[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Node2D.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="."]
position = Vector2( -304, -320 )
texture = ExtResource( 1 )
offset = Vector2( 510, 425 )

[node name="Icon2" type="Sprite" parent="."]
position = Vector2( 347, -324 )
texture = ExtResource( 1 )
offset = Vector2( 510, 425 )

[node name="Icon3" type="Sprite" parent="."]
position = Vector2( 410, 400 )
texture = ExtResource( 1 )
offset = Vector2( 454, 105 )

[node name="Icon4" type="Sprite" parent="."]
position = Vector2( -244, 386 )
texture = ExtResource( 1 )
offset = Vector2( 454, 105 )
